# multi_agent

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  multi-agent-architecture-spec-v4.md  multi-agent-architecture-spec-v5.md  multi-agent-architecture-spec-v6.md  project-development-plan-v1.md  pyproject.toml  runtime-dashboard-prototype-v2.html  schema.sql
dags/: coop_demo.json  research_report.json
dashboard/: index.html
orchestrator/: api.py  context_packer.py  dag_loader.py  failure_handler.py  main.py  planner.py  recovery.py  scheduler.py  wizard.py
skills/: fact-check.md  structured-output.md
storage/: memory_store.py  state_store.py  transcript_store.py
tests/: _mcp_fake_server.py  test_agent.py  test_api.py  test_context_packer.py  test_dag_loader.py  test_dotenv_loading.py  test_failure_handler.py  test_harness.py  test_heartbeat.py  test_llm_clients.py  test_mcp_client.py  test_memory_store.py  test_namespace_isolation.py  test_planner.py  test_recovery.py  test_sandbox.py  test_sandbox_e2b.py  test_scheduler.py  test_skills.py  test_state_store.py  test_tool_loop.py  test_tools.py  test_transcript_store.py  test_v6_coop.py  test_writeback.py
worker/: agent.py  harness.py  heartbeat.py  llm_clients.py  mcp_client.py  sandbox.py  sandbox_e2b.py  skills.py  tool_loop.py  tools.py  writeback.py
