[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Multi-agent collaboration system (spec v4)"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.4.15",
    "sentence-transformers>=2.2.2",
    "anthropic>=0.39.0",
    "tiktoken>=0.7.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "e2b>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator*", "worker*", "storage*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
